--- a/src/main/webapp/css/vittoriostyle.css
+++ b/src/main/webapp/css/vittoriostyle.css
@@ -12,6 +12,9 @@ div.text{
 }
 
 .header {
+	background-image: url("/JspApp/css/sfondo.jpg");
+	background-size:100% auto;
+	background-position: center;
 	text-align: center;
 	font-size: 800%;
 	font-family: sans-serif;
@@ -66,6 +69,7 @@ h2 {
 	
 }
 .login{
+
 	position:fixed;
 	heigth:50%;
 	width:20%;
@@ -92,6 +96,11 @@ h2 {
 	text-align: center;
 }
 
+.bg{
+		background-image: url("/JspApp/css/alpaca.jpg");
+		background-size:cover;
+
+}
 /* Anchors */
 a {
 	text-decoration: none;
