--- a/src/app/user/orders/orders.component.html
+++ b/src/app/user/orders/orders.component.html
@@ -19,6 +19,12 @@
               Prezzo
             </th>
             <th>
+                Immagine
+                </th>
+                <th>
+                QRLink
+                </th> 
+            <th>
               Edit
             </th>
             <th>
@@ -41,8 +47,11 @@
               {{dataora()}}
             </td>
             <td>
-              <input placeholder="Indirizzo" [(ngModel)]="orderstoinsert.prezzo">
+              <input placeholder="Prezzo" [(ngModel)]="orderstoinsert.prezzo">
             </td>
+            <td colspan="2">
+                <h3>Devi prima effettuare l'ordine per personalizzarlo!</h3>
+             </td> 
             <td>
               <button (click)="insert(orderstoinsert)">Insert</button>
             </td>
@@ -51,7 +60,7 @@
             </td>
 
           </tr>
-          <tr *ngFor="let order of orders; let i= index">
+          <tr *ngFor="let order of orders">
               <td>
                   <button (click)="readc(order.idclient);" style="width:50px">{{order.idclient}}</button>
                   
@@ -67,7 +76,13 @@
               {{order.prezzo}}
             </td>
             <td>
-              <button (click)="update(order)">Save</button>
+            <!--<input type="file" placeholder="Immagine" [(ngModel)]="orderstoinsert.prezzo">Qui ci va l'upload-->
+          </td>
+          <td>
+              <!--<input placeholder="QRLink" [(ngModel)]="orderstoinsert.prezzo">Qui ci va itemtoinsert.qrlink-->
+          </td> 
+            <td>
+              <button (click)="update(order)">Custom</button>
             </td>
 
             <td>
@@ -78,42 +93,40 @@
       
         <table *ngIf="isselectedc">
             <tr>
-              <th>
-                  ID
+                <th>
+                    ID
+                </th>
+                <th>
+                    Nome
+                </th>
+                <th>
+                   Cognome
+                </th>
+                <th>
+                  Indirizzo
+                </th>
+  
+                <th>
+      
               </th>
-              <th>
-                  ID Client
-              </th>
-              <th>
-                  ID Item
-              </th>
-              <th>
-                Data
-              </th>
-              <th>
-                Prezzo
-              </th>
-              <th>
-    
-            </th>
-            </tr>
-            <tr>
+              </tr>
+              <tr>
+                  <td>
+                {{selectedc.id }} 
+                </td>
+                  <td>
+                      {{selectedc.nome}}
+                </td>
                 <td>
-              {{selectedc.id }} 
-              </td>
+                    {{selectedc.cognome}}
+                </td>
                 <td>
-                    {{selectedc.nome}}
-              </td>
-              <td>
-                  {{selectedc.cognome}}
-              </td>
-              <td>
-                  {{selectedc.indirizzo}}
-              </td>
-              <td>
-                  <button (click)="closeread()">Close</button>
-              </td>
-            </tr>
+                    {{selectedc.indirizzo}}
+                </td>
+                <td>
+                    <button (click)="closeread()">Close</button>
+                </td>
+              </tr>
           </table>
 
         <table *ngIf="isselectedi">
@@ -122,16 +135,19 @@
                   ID
               </th>
               <th>
-                  ID Client
+                  Nome
               </th>
               <th>
-                  ID Item
+                  Descrizione
               </th>
               <th>
-                Data
+                Tipo
               </th>
               <th>
-                Prezzo
+               Colore
+              </th> 
+              <th>
+                Taglia
               </th>
               <th>
     
@@ -146,6 +162,9 @@
               </td>
               <td>
                   {{selectedi.descrizione}}
+              </td>
+              <td>
+                  {{selectedi.tipo}}
               </td>
               <td>
                   {{selectedi.colore}}
@@ -177,8 +196,11 @@
                 Prezzo
               </th>
               <th>
-    
-            </th>
+                  Immagine
+              </th>
+              <th>
+                  QRLink
+              </th>
             </tr>
             <tr>
                 <td>
@@ -195,6 +217,12 @@
               </td>
               <td>
                   {{selected.prezzo}}
+              </td>
+              <td>
+                  {{selectedi.immagine}}
+              </td>
+              <td>
+                  {{selectedi.link}}
               </td>
               <td>
                   <button (click)="closeread()">Close</button>
