--- a/src/app/admin/item/item.component.html
+++ b/src/app/admin/item/item.component.html
@@ -11,7 +11,7 @@
             Descrizione
           </th>
           <th>
-            Tipo
+              <input type="text" placeholder="Tipo" [(ngModel)]="searchVal" (ngModelChange)='checkSearchVal()' >
           </th>
           <th>
             Colore
@@ -66,7 +66,7 @@
           <td>
           </td>
           </tr>
-        <tr *ngFor="let item of items">
+        <tr *ngFor="let item of result">
             <td>
                 <input [(ngModel)]="item.nome">
           </td>
