--- a/src/app/user/item/item.component.css
+++ b/src/app/user/item/item.component.css
@@ -5,7 +5,7 @@
 /*Tables*/
 table {
 	border-collapse: collapse;
-    
+    border: 1px solid black;
     table-layout:fixed;
     width: 120%;
 	border-radius: 4px;
@@ -16,6 +16,7 @@ th, td {
 	text-align: center;
     padding: 2px;
     width: 80%;
+    border: 1px solid black;
     
 }
 
