--- a/src/app/user/item/item.component.html
+++ b/src/app/user/item/item.component.html
@@ -11,7 +11,7 @@
             Descrizione
           </th>
           <th>
-            Tipo
+              <input type="text" placeholder="Tipo" [(ngModel)]="searchVal" (ngModelChange)='checkSearchVal()' >
           </th>
           <th>
             Colore
@@ -19,82 +19,45 @@
           <th>
             Taglia
           </th>
+<!--
           <th>
             Immagine
           </th>
           <th>
             Link
           </th>
-          <th>
-            Insert/Save
-          </th>
-          <th>
-            Delete/Clear
-          </th>
+        -->
           <th>
             Read
           </th>
         </tr>
-        <tr>
-          <td>
-            <input placeholder="Nome" [(ngModel)]="itemtoinsert.nome">
+
+        <tr *ngFor="let item of result">
+            <td *ngIf="checknativeitem(item)" >
+                {{item.nome}}
           </td>
-          <td>
-            <input placeholder="Descrizione" [(ngModel)]="itemtoinsert.descrizione">
+          <td *ngIf="checknativeitem(item)" >
+          {{item.descrizione}}
+          </td  >
+          <td *ngIf="checknativeitem(item)" >
+              {{item.tipo}}
           </td>
-          <td>
-            <input placeholder="Tipo" [(ngModel)]="itemtoinsert.tipo">
+          <td *ngIf="checknativeitem(item)" >
+              {{item.colore}}
           </td>
-          <td>
-            <input placeholder="Colore" [(ngModel)]="itemtoinsert.colore">
+          <td *ngIf="checknativeitem(item)" >
+              {{item.taglia}}
           </td>
-          <td>
-            <input placeholder="Taglia" [(ngModel)]="itemtoinsert.taglia">
-          </td>
-          <td>
-            <input placeholder="Immagine" [(ngModel)]="itemtoinsert.immagine">
-          </td>
-          <td>
-            <input placeholder="Link" [(ngModel)]="itemtoinsert.link">
-          </td>
-          <td>
-            <button (click)="insert(itemtoinsert)">Insert</button>
-          </td>
-          <td>
-            <button (click)="clear()">Clear</button>
-          </td>
-          <td>
-          </td>
-          </tr>
-        <tr *ngFor="let item of items">
-            <td>
-                <input [(ngModel)]="item.nome">
-          </td>
-          <td>
-            <input [(ngModel)]="item.descrizione">
-          </td>
-          <td>
-            <input [(ngModel)]="item.tipo">
-          </td>
-          <td>
-            <input [(ngModel)]="item.colore">
-          </td>
-          <td>
-            <input [(ngModel)]="item.taglia">
-          </td>
-          <td>
+          <!--
+          <td *ngIf="checknativeitem(item)" >
             <input [(ngModel)]="item.immagine">
           </td>
-          <td>
+          <td *ngIf="checknativeitem(item)" >
             <input [(ngModel)]="item.link">
           </td>
-          <td>
-            <button (click)="update(item)">Save</button>
-          </td>
-          <td>
-            <button (click)="delete(item)">Delete</button>
-          </td>
-          <td>
+        -->
+
+          <td *ngIf="checknativeitem(item)" >
             <button (click)="select(item)">Read</button>
           </td>
         </tr>
@@ -117,12 +80,14 @@
           <th>
             Taglia
           </th>
+          <!--
           <th>
             Immagine
           </th>
           <th>
             QR Link
           </th>
+          -->
           <th>
 
         </th>
@@ -143,12 +108,8 @@
           <td>
               {{selected.taglia}}
           </td>
-          <td>
-            {{selected.immagine}} 
-            </td>
-            <td>
-              {{selected.link}} 
-              </td>
+          
+
           <td>
               <button (click)="closeread()">Close</button>
           </td>
