Aggiornata view user Ordini, con sorting per data

--- a/src/app/user/orders/orders.component.html
+++ b/src/app/user/orders/orders.component.html
@@ -40,7 +40,7 @@
             <td>
               <!--<input  [(ngModel)]="">-->
               <select placeholder="IDitem" [(ngModel)]="orderstoinsert.iditem" >
-              <option *ngFor="let item of items" [selected]="orderstoinsert.iditem===item.id" value={{item.id}}>{{item.nome}}</option>
+              <option *ngFor="let item of items" [selected]="orderstoinsert.iditem===item.id" value={{item.id}}>{{save(item)}}{{item.nome}}</option>
                 </select>
             </td>
             <td>
