--- a/src/app/admin/orders/orders.component.css
+++ b/src/app/admin/orders/orders.component.css
@@ -21,12 +21,12 @@ td{
 }
 
 
-tr:nth-child(even) {
-	background-color: #ffdb99;
+tr {
+	background-color: lightcyan;
 }
 
 th {
-	background-color: darkorange;
+	background-color: darkcyan;
 	color: #ffffff;
 }
 
@@ -40,9 +40,29 @@ input, select{
 }
 
 input:hover,  input:active, input:focus{
-    border: 2px solid crimson;
+    border: 1px solid crimson;
 }
 
 button:hover{
     background-color: crimson;
 }
+
+img{
+	width: 70px;
+	height: 70px;
+}
+	.zoom {
+		transition: transform .4s; 
+		width: 70px;
+		height: 70px;
+		margin: 0 auto;
+	  }
+
+	  .zoom:hover 
+	  {
+		z-index:1;
+		  transform: scale(6.04) translate(30px,10px); 
+		
+		}
+
+	
