--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -4,19 +4,22 @@
   </div>
 
   <div class="col-md-3">
-      <div class="searchContainer">
+      <!--<div class="searchContainer">
           <i class="fa fa-search searchIcon"></i>
           <input class="searchBox" type="search" name="search" placeholder="Search...">
-      </div>
+      </div>-->
   </div>
-  <div class="col-md-4" style="text-align: center">
-      <img src="../../../assets/logo.svg" alt="header" style="width:30%; height: 30%;">
+  <div class="col-md-4" style="    vertical-align: top;
+   text-align: center">
+      
+      <!--<img src="../../../assets/logo.svg" alt="header" style="width:30%; height: 30%;">-->
+      <span style="display: block; font-weight:bold; font-size: 60px ; color:white;">PrintOnDemand</span>
   </div>
   <div class="col-md-1" style="text-align: center">
   </div>
   <div class="col-md-2" style="display: inline-block">
-<a><i class="fas fa-phone" style="font-size:25px; padding:12px"></i></a> 
+<!--<a><i class="fas fa-phone" style="font-size:25px; padding:12px"></i></a> 
 <a><i class="fas fa-bell" style="font-size:25px; padding:12px"></i></a> 
-<a><i class="fas fa-envelope" style="font-size:25px; padding:12px"></i></a> 
+<a><i class="fas fa-envelope" style="font-size:25px; padding:12px"></i></a> -->
   </div>
 </div>
