--- a/src/app/admin/item/item.component.css
+++ b/src/app/admin/item/item.component.css
@@ -19,6 +19,15 @@ th, td {
     
 }
 
+.specifictd {    
+    width:360px;  /* adjust to desired wrapping */
+    display:table;
+    white-space: pre-wrap; /* css-3 */
+    white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
+    white-space: -pre-wrap; /* Opera 4-6 */
+    white-space: -o-pre-wrap; /* Opera 7 */
+    word-wrap: break-word; /* Internet Explorer 5.5+ */
+}
 td{
     font-size: 16px;
     
@@ -28,12 +37,12 @@ td{
 
 
 
-tr:nth-child(even) {
-	background-color: #ffdb99;
+tr {
+	background-color: lightcyan;
 }
 
 th {
-	background-color: darkorange;
+	background-color: darkcyan;
     color: #ffffff;
 }
 
