--- a/src/app/layout/user-layout/user-menu/user-menu.component.html
+++ b/src/app/layout/user-layout/user-menu/user-menu.component.html
@@ -8,12 +8,12 @@
 
           <button type="button" class="menubtn" data-toggle="collapsebtn" data-target="#client"
               (click)="clientcollapse()">
-              <i class="fas fa-user" style="margin-right: 15px"></i> Client
+              <i class="fas fa-user" style="margin-right: 15px"></i> Indirizzi
           </button>
           <div class="collapsebtn" id="client" *ngIf="isClientCollapsed">
               <button class="menubtn" style="background-color: #334247; padding-left: 40px">
                   <a [routerLink]="['/user-dashboard/client']"> <i class="fas fa-edit" style="margin-right: 10px">
-                  </i>Edit Client</a>
+                  </i>Gestisci Indirizzi</a>
               </button>
              
           </div>
@@ -26,7 +26,7 @@
           <button class="menubtn" style="background-color: #334247; padding-left: 40px">
               <a [routerLink]="['/user-dashboard/item']"> <i class="fas fa-user-edit"
                       style="margin-right: 15px"></i>
-                  Edit Articoli</a>
+                  Catalogo</a>
           </button>
       </div>
       
@@ -38,18 +38,18 @@
       <button class="menubtn" style="background-color: #334247; padding-left: 40px">
           <a [routerLink]="['/user-dashboard/orders']"> <i class="fas fa-user-edit"
                   style="margin-right: 15px"></i>
-              View Orders</a>
+              Vedi Ordini</a>
       </button>
   </div>
 
           <button type="button" class="menubtn" data-toggle="collapsebtn" data-target="#users"
               (click)="userscollapse()">
-              <i class="fas fa-users" style="margin-right: 15px"></i>Lista User
+              <i class="fas fa-users" style="margin-right: 15px"></i>Utente
           </button>
           <div class="collapsebtn" id="users" *ngIf="isUserCollapsed">
               <button class="menubtn" style="padding-left: 40px; background-color: #334247;">
                   <a [routerLink]="['/user-dashboard/users']"> <i class="fas fa-edit" style="margin-right: 10px">
-                      </i> Gestisci Users </a>
+                      </i> Gestisci Dati personali </a>
               </button>
           </div>
           <button class="menubtn" (click)="logout()">
